# ai-agent-orchestration-dashboard

./: .gitignore  README.md
backend/: .env.example  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: __init__.py  base_agent.py  developer_agent.py  final_answer_agent.py  planner_agent.py  research_agent.py  reviewer_agent.py  technical_architect_agent.py
backend/app/api/: router.py
backend/app/api/routes/: agents.py  health.py  workflows.py
backend/app/core/: config.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/models/: __init__.py  agent.py  enums.py  workflow.py
backend/app/repositories/: __init__.py  workflow_repository.py
backend/app/services/: __init__.py  openrouter_client.py  orchestrator.py
backend/tests/: test_agents.py  test_health.py  test_models.py  test_openrouter_client.py  test_orchestrator.py  test_specialized_agents.py  test_workflow_persistence.py
docs/: architecture.md  development.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  workflows.ts
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/components/ui/: Card.tsx  ErrorState.tsx  LoadingState.tsx  StatusBadge.tsx
frontend/src/lib/: navigation.ts  workflowDisplay.ts
frontend/src/pages/: DashboardPage.tsx  WorkflowDetailPage.tsx  WorkflowHistoryPage.tsx  WorkflowRunPage.tsx
frontend/src/styles/: index.css
frontend/src/types/: workflow.ts
(+2 files in other folders)
